working on font - adding stylesheets rel in html at top

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <link rel="stylesheet" href="BW1-Parallax\less\index.less">
 <link rel="stylesheet" href="Netlify-BW1\css\index.css">
 <link rel="stylesheet" href="Netlify-BW1\less\index.less">
+<link rel="stylesheet" href="Netlify-BW1\script.js">
 </head>
 <body>
 
