adding more stylesheets

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 <link rel="stylesheet" href="Netlify-BW1\css\index.css">
 <link rel="stylesheet" href="Netlify-BW1\less\index.less">
 <link rel="stylesheet" href="Netlify-BW1\script.js">
+<link rel="stylesheet" href="less\index.less">
+
+
 </head>
 <body>
 
