--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
         </div>
         <div class="img-content">
             <img src="https://images.unsplash.com/photo-1517971129774-8a2b38fa128e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=334&q=80" alt="Plant1">
-            <p>We study the plants we water. All day everyday.</p>
+            <p class="right-of-photo-text">We study the plants we water. All day everyday.</p>
         </div>
         <div class="img-content">
             <img src="https://images.unsplash.com/photo-1446071103084-c257b5f70672?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=331&q=80" alt="Plant2">
