removed parallax attempt

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 
   <!-- BEGIN SCROLL PAGE ONE -->
-  <section class="background"><!--scroll page one-->
+  <section class="backgroundOne"><!--scroll page one-->
     <div class="content-wrapper">
 
 
