working on mobile view

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 <link rel="stylesheet" href="Netlify-BW1\script.js">
 <link rel="stylesheet" href="less\index.less">
 
+<link rel="stylesheet" href="animatescript copy.js">
+<link rel="stylesheet" href="animatestyle copy.css">
+
 
 </head>
 <body>
@@ -23,10 +26,12 @@
 <!-- partial:index.partial.html -->
 <div class="container"> 
 
-
+ 
   <!-- BEGIN SCROLL PAGE ONE -->
-  <section class="backgroundOne"><!--scroll page one-->
+  <section class="background"><!--scroll page one-->
+    <div class="parallax-remove">
     <div class="content-wrapper">
+    
 
 
 
@@ -321,7 +326,7 @@
 
 
 
-
+    
   <!-- spaces above here to separate animation code -->
   <!-- end crazy animation code -->
   <!-- end crazy animation code -->
@@ -339,10 +344,16 @@
           <a href="gsap-svg-plants\dist\index.html">What We Do</a>
       </nav>
   
-    </div>
-  </section>
+    </div><!--parallax remove div-->
+
+  </div> 
+
   <!-- END SCROLL PAGE ONE -->
 
+</section>
+
+  <!-- BEGIN SCROLL PAGE TWO -->
+  
   <section class="background">
     <div class="content-wrapper">
       <p class="content-title">Experience</p>
@@ -412,18 +423,18 @@
 
     </div>
   </section>
-
+<!-- END SCROLL PAGE TWO -->
 
 
 <!-- BEGIN SCROLL PAGE THREE -->
-  <section class="background">
+  <section class="background ">
     <div class="content-wrapper">
       <p class="content-title">More help</p>
       <p class="content-subtitleTwo">What goes here?</p>
     </div>
   </section>
    <!-- END SCROLL PAGE THREE -->
-
+  
 
 </div>
 <!-- partial -->
@@ -436,7 +447,21 @@
 
 
 
+<!-- start mobile view -->
+<!-- start mobile view -->
+<!-- start mobile view -->
 
+<div class="mobileView">
+  <h2>Welcome to Water My Plants</h2>
+  
+
+<div class="mobileImage">
+    <img src="https://images.unsplash.com/photo-1446071103084-c257b5f70672?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=331&q=80" alt="Plant4">
+</div>
+
+</div>
 
 </body>
+
+
 </html>
